<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    android:id="@+id/radio_group"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <RadioButton android:id="@+id/radio_any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/option_mission_status_any" />

    <RadioButton android:id="@+id/radio_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/option_mission_status_success" />

    <RadioButton android:id="@+id/radio_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/option_mission_status_failure" />

</RadioGroup>