<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/list_item_spacing_half"
    android:orientation="vertical"
    tools:context=".home.rocketlaunch.itself.RocketLaunchBottomSheet">

    <TextView
        android:id="@+id/txt_mission_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingVertical="30dp"
        style="@style/BottomSheetTitle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_rocket_launch_article_link"
        style="@style/Widget.App.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_wikipedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_rocket_launch_wikipedia_link"
        style="@style/Widget.App.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_rocket_launch_video_link"
        style="@style/Widget.App.Button.TextButton"/>

</androidx.appcompat.widget.LinearLayoutCompat>