<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="18dp">

    <ImageView
        android:id="@+id/img_mission_patch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RocketLaunchPatchImageView"/>

    <ImageView
        android:id="@+id/img_successful_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_mission_patch"
        app:layout_constraintStart_toStartOf="@id/img_mission_patch"
        app:layout_constraintEnd_toEndOf="@id/img_mission_patch"
        android:layout_marginTop="8dp"/>

    <!--MISSION-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_mission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_mission_patch"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="4dp">

        <TextView
            android:id="@+id/label_mission_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_launch_mission_name" />

        <TextView
            android:id="@+id/txt_mission_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="4dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--DATE/TIME-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_date_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_mission"
        app:layout_constraintStart_toEndOf="@id/img_mission_patch"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="4dp">

        <TextView
            android:id="@+id/label_date_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_launch_date_time" />

        <TextView
            android:id="@+id/txt_date_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="4dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--ROCKET-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_rocket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_date_time"
        app:layout_constraintStart_toEndOf="@id/img_mission_patch"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="4dp">

        <TextView
            android:id="@+id/label_rocket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_launch_rocket_info" />

        <TextView
            android:id="@+id/txt_rocket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="4dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--DAYS SINCE/FROM-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_rocket"
        app:layout_constraintStart_toEndOf="@id/img_mission_patch"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="4dp">

        <TextView
            android:id="@+id/label_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_launch_days_since" />

        <TextView
            android:id="@+id/txt_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="4dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/layout_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        style="@style/Divider"/>

</androidx.constraintlayout.widget.ConstraintLayout>